@@ -1,5 +1,8 @@
 2017-11-16  larissa9839  <larissa9839@gmail.com>
 
+	* tryXpath/popup/popup.js:
+	Rename function name. changeFrameVisible -> changeFrameIdVisible.
+
 	* tryXpath/popup/popup.html (Main):
 	Add some elements related frameDesignation.
 
